# outpost

./: Cargo.toml  LICENSE  README.md  outpost.toml  tools.nu
.github/workflows/: build.yml  on_tag.yml
src/: cli.rs  config.rs  database.rs  fetch_and_compare.rs  git.rs  lib.rs  main.rs  system.rs
src/cli/: ls.rs  rm.rs  start.rs  stop.rs
src/system/: linux.rs  macos.rs
src/worker/: poll.rs
